--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,10 +35,18 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
+      - name: Configure SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_temp
+          chmod 600 ~/.ssh/id_temp
+          eval "$(ssh-agent -s)"
+          ssh-add ~/.ssh/id_temp
+
       - name: Add Host Key to Known Hosts
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan ${{ secrets.VPS_IP }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.VPS_IP }} >> ~/.ssh/known_hosts
 
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
@@ -47,16 +55,20 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            # Check if the project directory exists
-            if [ ! -d "/./websites/test-app" ]; then
+            if [ ! -d "/home/edwardkemp/websites/test-app" ]; then
               echo "Project directory does not exist. Cloning repository..."
-              git clone git@github.com:Steadyx/test-app.git /home/edwardkemp/websites/
+              export GIT_SSH_COMMAND="ssh -i ~/.ssh/id_temp"
+              git clone git@github.com:Steadyx/test-app.git /home/edwardkemp/websites/test-app
             else
               echo "Project directory exists. Pulling latest changes..."
-              cd ./websites/test-app
+              cd /home/edwardkemp/websites/test-app
+              export GIT_SSH_COMMAND="ssh -i ~/.ssh/id_temp"
               git pull origin main
             fi
 
-            # Deploy the stack
-            cd ./websites/test-app
+            cd /home/edwardkemp/websites/test-app
             docker stack deploy -c docker-compose.prod.yml test-app
+
+      - name: Cleanup Temporary SSH Key
+        run: |
+          rm -f ~/.ssh/id_temp
