--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,7 +32,7 @@ services:
           - "node.role == manager"                 # Ensure Traefik runs only on manager nodes
 
   frontend:
-    image: your-dockerhub-username/frontend:latest
+    image: edwardkemp/frontend:latest
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.frontend.rule=Host(`edward-codes.com`)" # Replace with your domain
@@ -40,7 +40,7 @@ services:
       - "traefik.http.routers.frontend.tls.certresolver=myresolver"  # Use Let's Encrypt resolver
 
   backend:
-    image: your-dockerhub-username/backend:latest
+    image: edwardkemp/backend:latest
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=Host(`api.edward-codes.com`)" # Replace with your API domain
