--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v2
@@ -68,6 +68,13 @@ jobs:
             echo "Removing existing Docker stack..."
             docker stack rm test-app
             sleep 10  # Wait for the removal to complete
+
+            # Check if the network still exists
+            if docker network ls | grep -q "test-app_default"; then
+              echo "Network still exists. Attempting to remove it..."
+              docker network rm test-app_default
+              sleep 5  # Wait for the removal of the network
+            fi
 
             # Deploy the new stack to Docker
             echo "Deploying the Docker stack..."
