--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -43,7 +43,7 @@ services:
     image: edwardkemp/backend:latest
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=Host(edward-codes.com`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.backend.rule=Host(`edward-codes.com`) && PathPrefix(`/api`)"
       - "traefik.http.routers.backend.entrypoints=websecure"
       - "traefik.http.routers.backend.tls.certresolver=myresolver"
       - "traefik.http.services.backend.loadbalancer.server.port=80"
