--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 networks:
-  test-app_default:  # Specify the network with the correct name
+  test-app_default:
     driver: overlay
 
 services:
@@ -24,11 +24,18 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "letsencrypt:/letsencrypt"
-      
+
+    networks:
+      - test-app_default
+
     deploy:
       placement:
         constraints:
           - "node.role == manager"
+      replicas: 1  # Ensuring only one Traefik instance runs
+      update_config:
+        parallelism: 1
+        delay: 10s
 
   frontend:
     image: edwardkemp/frontend:latest
@@ -38,6 +45,19 @@ services:
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=myresolver"
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
+      # Optional: Redirect HTTP to HTTPS
+      - "traefik.http.routers.frontend-http.rule=Host(`edward-codes.com`)"
+      - "traefik.http.routers.frontend-http.entrypoints=web"
+      - "traefik.http.routers.frontend-http.middlewares=redirect-to-https"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+
+    networks:
+      - test-app_default
+
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
 
   backend:
     image: edwardkemp/backend:latest
@@ -48,5 +68,14 @@ services:
       - "traefik.http.routers.backend.tls.certresolver=myresolver"
       - "traefik.http.services.backend.loadbalancer.server.port=80"
 
+    networks:
+      - test-app_default
+
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+
 volumes:
   letsencrypt:
+    driver: local
