--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,17 +17,17 @@ services:
       - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
       - "--certificatesresolvers.myresolver.acme.email=edwardlanekemp@gmail.com"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
-
+    
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "letsencrypt:/letsencrypt"
-
+    
     networks:
       - test-app_default
-
+    
     deploy:
       placement:
         constraints:
@@ -36,6 +36,12 @@ services:
       update_config:
         parallelism: 1
         delay: 10s
+      labels:
+        - "traefik.http.routers.traefik-acme.rule=PathPrefix(`/.well-known/acme-challenge/`)"
+        - "traefik.http.routers.traefik-acme.entrypoints=web"
+        - "traefik.http.routers.traefik-acme.priority=1000"
+        - "traefik.http.routers.traefik-acme.service=acme-challenge"
+        - "traefik.http.services.acme-challenge.loadbalancer.server.port=0"
 
   frontend:
     image: edwardkemp/frontend:latest
@@ -50,10 +56,10 @@ services:
       - "traefik.http.routers.frontend-http.entrypoints=web"
       - "traefik.http.routers.frontend-http.middlewares=redirect-to-https"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
-
+    
     networks:
       - test-app_default
-
+    
     deploy:
       replicas: 2
       restart_policy:
@@ -67,10 +73,10 @@ services:
       - "traefik.http.routers.backend.entrypoints=websecure"
       - "traefik.http.routers.backend.tls.certresolver=myresolver"
       - "traefik.http.services.backend.loadbalancer.server.port=80"
-
+    
     networks:
       - test-app_default
-
+    
     deploy:
       replicas: 2
       restart_policy:
