--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,5 @@
-FROM nginx:alpine
-
-COPY index.html /usr/share/nginx/html
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+     FROM nginx:alpine
+     COPY index.html /usr/share/nginx/html
+     COPY ./nginx/default.conf /etc/nginx/conf.d/
+     EXPOSE 80
+     CMD ["nginx", "-g", "daemon off;"]
