--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN rm /etc/nginx/conf.d/default.conf
 RUN rm /docker-entrypoint.d/10-listen-on-ipv6-by-default.sh
 
 # Copy your custom Nginx configuration
-COPY default.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 
 # Copy frontend static files
 COPY index.html /usr/share/nginx/html/
