--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,9 +6,9 @@ FROM nginx:alpine
 RUN rm /etc/nginx/conf.d/default.conf
 
 # Remove the IPv6 entrypoint script to prevent Nginx from enabling IPv6
-RUN rm /docker-entrypoint.d/10-listen-on-ipv6-by-default.sh || true
+RUN rm -f /docker-entrypoint.d/10-listen-on-ipv6-by-default.sh
 
-# Copy your custom production Nginx configuration
+# Copy your custom Nginx configuration
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 # Copy frontend static files
