--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,11 +1,11 @@
-     server {
-         listen       80;
-         server_name  edward-codes.com;
-     
-         root   /usr/share/nginx/html;
-         index  index.html;
-     
-         location / {
-             try_files $uri $uri/ /index.html;
-         }
-     }
+server {
+    listen 80 default_server;
+    server_name edward-codes.com;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+}
