--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,8 +50,7 @@ jobs:
             # Navigate to the project directory
             cd /home/${{ secrets.VPS_USER }}/websites/test-app
 
-            # Optional: Initialize directories or files if needed
-            # Example: Ensure docker-compose.prod.yml exists
+            # Check if docker-compose.prod.yml exists
             if [ ! -f docker-compose.prod.yml ]; then
               echo "docker-compose.prod.yml not found. Exiting."
               exit 1
@@ -77,6 +76,6 @@ jobs:
             echo "Verifying service deployment..."
             docker stack services test-app
 
-            # Optionally, inspect Traefik logs for any immediate errors
-            echo "Checking Traefik logs..."
-            docker service logs test-app_traefik --tail 100
+            # Optionally, inspect frontend logs for any immediate errors
+            echo "Checking Frontend logs..."
+            docker service logs test-app_frontend --tail 100
