--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,81 +1,23 @@
-name: Deploy to VPS
+- name: Deploy to VPS
+  uses: appleboy/ssh-action@v0.1.11  # Use a specific version
+  with:
+    host: ${{ secrets.VPS_IP }}
+    username: ${{ secrets.VPS_USER }}
+    key: ${{ secrets.SSH_KEY }}  # SSH key to access the VPS
+    port: 22  # Change if your SSH runs on a different port
+    script: |
+      # Define environment variables used in deploy.sh
+      export VPS_USER=${{ secrets.VPS_USER }}
 
-on:
-  push:
-    branches:
-      - main
+      # Navigate to the directory where deploy.sh is located
+      cd /home/${{ secrets.VPS_USER }}/websites/test-app || exit
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+      # If deploy.sh doesn't exist on the VPS, copy it from the repository
+      if [ ! -f "./deploy/deploy.sh" ]; then
+        echo "deploy.sh not found. Copying from repository..."
+        cp "$PROJECT_DIR/deploy/deploy.sh" .
+        chmod +x deploy.sh
+      fi
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Build and push frontend image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./frontend
-          platforms: linux/amd64
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/frontend:latest
-
-      - name: Build and push backend image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./backend
-          platforms: linux/amd64
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/backend:latest
-
-      - name: Add Host Key to Known Hosts
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.VPS_IP }} >> ~/.ssh/known_hosts
-
-      - name: Deploy to VPS
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.VPS_IP }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.SSH_KEY }}  # SSH key to access the VPS
-          script: |
-            # Navigate to the project directory
-            cd /home/${{ secrets.VPS_USER }}/websites/test-app
-
-            # Check if docker-compose.prod.yml exists
-            if [ ! -f docker-compose.prod.yml ]; then
-              echo "docker-compose.prod.yml not found. Exiting."
-              exit 1
-            fi
-
-            # Remove the existing stack to allow for a new deployment
-            echo "Removing existing Docker stack..."
-            docker stack rm test-app
-            sleep 10  # Wait for the removal to complete
-
-            # Remove network only if it exists
-            if docker network ls | grep -q "test-app_default"; then
-              echo "Network exists, removing it..."
-              docker network rm test-app_default || echo "Network already removed or doesn't exist."
-              sleep 5  # Wait for the removal of the network
-            fi
-
-            # Deploy the new stack to Docker
-            echo "Deploying the Docker stack..."
-            docker stack deploy -c docker-compose.prod.yml test-app
-
-            # Optionally, verify that services are running
-            echo "Verifying service deployment..."
-            docker stack services test-app
-
-            # Optionally, inspect frontend logs for any immediate errors
-            echo "Checking Frontend logs..."
-            docker service logs test-app_frontend --tail 100
+      # Execute the deployment script
+      ./deploy/deploy.sh
