--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,19 +43,13 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
-      # 6. Add GitHub.com SSH Key to Known Hosts
-      - name: Add GitHub.com SSH Key to Known Hosts
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-
-      # 7. Add VPS SSH Host Key to Known Hosts
+      # 6. Add VPS SSH Host Key to Known Hosts
       - name: Add VPS SSH Host Key to Known Hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.VPS_IP }} >> ~/.ssh/known_hosts
 
-      # 8. Deploy to VPS using SSH
+      # 7. Deploy to VPS
       - name: Deploy to VPS
         uses: appleboy/ssh-action@v0.1.4  # Use a specific stable version
         with:
@@ -64,27 +58,53 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: 22  # Change if your SSH runs on a different port
           script: |
-            #!/bin/bash
             set -e  # Exit immediately if a command exits with a non-zero status
 
-            # Navigate to the project directory
-            cd /home/${{ secrets.VPS_USER }}/websites/test-app || exit
+            # Define project directory
+            PROJECT_DIR="/home/${{ secrets.VPS_USER }}/websites/test-app"
 
-              # Ensure deploy.sh exists
-              if [ ! -f "./deploy/deploy.sh" ]; then
-                echo "deploy.sh not found. Copying it over..."
-                
-                # Assuming you have the local `deploy.sh` accessible via scp
-                scp -i ${{ secrets.SSH_KEY }} -P 22 /users/${{ serects.VPS_USER}}/projects/tests/deply/deploy.sh ${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/home/${{ secrets.VPS_USER }}/websites/test-app/deploy/
-                
-                # Verify the file was copied successfully
-                if [ ! -f "./deploy/deploy.sh" ]; then
-                  echo "Failed to copy deploy.sh. Exiting."
-                  exit 1
-                fi
-              fi
+            # Navigate to the websites directory
+            cd /home/${{ secrets.VPS_USER }}/websites || exit
 
-              # Make deploy.sh executable
-              chmod +x ./deploy/deploy.sh
-            # Execute the deployment script
-            ./deploy/deploy.sh
+            # Check if the project directory exists
+            if [ ! -d "test-app" ]; then
+              echo "Project directory does not exist. Cloning the repository..."
+              git clone -b main git@github.com:Steadyx/test-app.git test-app
+            else
+              echo "Project directory exists. Pulling the latest changes from main..."
+              cd test-app
+              git fetch origin main
+              git reset --hard origin/main
+            fi
+
+            cd "$PROJECT_DIR"
+
+            # Ensure docker-compose.prod.yml exists
+            if [ ! -f docker-compose.prod.yml ]; then
+              echo "docker-compose.prod.yml not found in the repository. Exiting."
+              exit 1
+            fi
+
+            # Remove the existing Docker stack to allow for a new deployment
+            echo "Removing existing Docker stack..."
+            docker stack rm test-app || echo "No existing stack to remove."
+            sleep 10  # Wait for the removal to complete
+
+            # Remove network only if it exists
+            if docker network ls | grep -q "test-app_default"; then
+              echo "Network exists, removing it..."
+              docker network rm test-app_default || echo "Network already removed or doesn't exist."
+              sleep 5  # Wait for the removal of the network
+            fi
+
+            # Deploy the new stack to Docker
+            echo "Deploying the Docker stack..."
+            docker stack deploy -c docker-compose.prod.yml test-app
+
+            # Optionally, verify that services are running
+            echo "Verifying service deployment..."
+            docker stack services test-app
+
+            # Optionally, inspect frontend logs for any immediate errors
+            echo "Checking Frontend logs..."
+            docker service logs test-app_frontend --tail 100
