--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,6 +1,15 @@
+# Redirect non-www to www (Optional - You can reverse this)
 server {
     listen 80;
-    server_name edward-codes.com www.edward-codes.com;
+    server_name edward-codes.com;
+
+    return 301 http://www.edward-codes.com$request_uri;
+}
+
+# Main server block for www
+server {
+    listen 80;
+    server_name www.edward-codes.com;
 
     root /usr/share/nginx/html;
     index index.html;
