--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,33 +1,7 @@
-# Redirect www to non-www
+# Main server block for local-only Nginx
 server {
-    listen 80;
-    server_name www.edward-codes.com;
-
-    # Redirect to non-www
-    return 301 http://edward-codes.com$request_uri;
-}
-
-# Main server block for non-www
-server {
-    listen 80;
-    server_name edward-codes.com;
-
-    root /usr/share/nginx/html;
-    index index.html;
-
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Logging
-    access_log /var/log/nginx/edward-codes_access.log;
-    error_log /var/log/nginx/edward-codes_error.log;
-}
-
-# Optional fallback block to serve both domains
-server {
-    listen 80;
-    server_name www.edward-codes.com edward-codes.com;
+    listen 8080;
+    server_name localhost;
 
     root /usr/share/nginx/html;
     index index.html;
